chore: grid spacing updates (anticipating Seeds fixes)

--- a/sites/partners/styles/overrides.scss
+++ b/sites/partners/styles/overrides.scss
@@ -22,20 +22,10 @@
 .grid-inset-section {
   background: var(--seeds-bg-color-surface-primary);
   padding: var(--seeds-spacer-section);
-
-  .text-heading-md {
-    margin-block-end: calc(0rem - var(--seeds-spacer-label));
-  }
 }
 
-@media (--sm-and-up) {
-  .grid-double-span {
-    grid-column: span 2;
-  }
-
-  .grid-triple-span {
-    grid-column: span 3;
-  }
+.grid-section-row-heading {
+  margin-block-end: calc(var(--seeds-s3) - var(--grid-gap, var(--seeds-s7)));
 }
 
 .spacer-container-above {
@@ -92,7 +82,7 @@
 
 /* Override out-of-date ui-components labeling */
 :is(label, legend).text__caps-spaced {
-/*  --text-caps-spaced-font-family: var(--bloom-font-sans); */
+  /*  --text-caps-spaced-font-family: var(--bloom-font-sans); */
   --text-caps-spaced-letter-spacing: normal;
   --text-caps-spaced-font-weight: normal;
   --text-caps-spaced-margin-bottom: var(--seeds-s2);
